cron_build_4.log
cargo :     Checking 
flowbot-rs v0.1.0 
(C:\Users\AMAN ANU\De
sktop\amxcodes\nanobo
t\nanobot-rs-clean)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -FilePath 
cron_build_4.log 
-Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Che   
 cking fl...nobot    
-rs-clean):Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused 
import: 
`console::style`
 --> src\doctor\teleg
ram.rs:5:5
  |
5 | use 
console::style;
  |     
^^^^^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` on by 
default

error[E0308]: 
mismatched types
    --> src\agent\mod
.rs:282:78
     |
 282 |               
  let mut 
args_value: 
serde_json::Value = s
erde_json::from_str(&
tool_call.function.ar
guments)
     |               
                     
                     
-------------------- 
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^ expected 
`&str`, found 
`&Value`
     |               
                     
                     
|
     |               
                     
                     
arguments to this 
function are 
incorrect
     |
     = note: 
expected reference 
`&str`
                
found reference 
`&serde_json::Value`
note: function 
defined here
    --> 
C:\Users\AMAN ANU\.ca
rgo\registry\src\inde
x.crates.io-1949cf8c6
b5b557f\serde_json-1.
0.149\src\de.rs:2699:
8
     |
2699 | pub fn 
from_str<'a, T>(s: 
&'a str) -> Result<T>
     |        
^^^^^^^^

warning: unused 
variable: `seconds`
   --> src\cron\mod.r
s:147:22
    |
147 |                
  let seconds = 
every_ms / 1000;
    |                
      ^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_seconds`
    |
    = note: `#[warn(u
nused_variables)]` 
on by default

For more information 
about this error, 
try `rustc --explain 
E0308`.
warning: 
`flowbot-rs` (lib) 
generated 2 warnings
error: could not 
compile `flowbot-rs` 
(lib) due to 1 
previous error; 2 
warnings emitted
